--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
     background-color: rgb(194, 226, 255);
 }
 
+.titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    color: #090086;
+}
+
 .caixa-de-texto {
     background-color: white;
     display: flex;
@@ -10,7 +18,7 @@ body {
     margin-top: 50px;
     height: 65px;
     width: 120px;
-    border: 2px solid black; 
+    border: 2px solid black;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-left: auto;
@@ -24,15 +32,7 @@ body {
     margin: 0;
 }
 
-.titulo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    color: #090086;
-}
-
-.botao {
+.botao-contador {
     display: flex;
     justify-content: center;
     margin-top: 40px;
@@ -61,4 +61,129 @@ body {
 
 .botao-diminuir button:hover {
     transform: scale(1.05);
+}
+
+
+/* BOTOES COLORIDOS*/
+.botao-alterar-cor-fundo button {
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background-image: linear-gradient(to right,
+            rgb(255, 0, 0),
+            rgb(255, 165, 0),
+            rgb(255, 255, 0),
+            rgb(0, 128, 0),
+            rgb(0, 0, 255),
+            rgb(75, 0, 130),
+            rgb(238, 130, 238),
+            rgb(255, 0, 0));
+
+    background-size: 200% auto;
+    animation: slideColor 4s linear infinite;
+    text-shadow:
+        1px 1px 0 #000,
+        -1px 1px 0 #000,
+        1px -1px 0 #000,
+        -1px -1px 0 #000;
+}
+
+.botao-alterar-cor-titulo button:hover {
+    transform: scale(1.05);
+}
+
+.botao-alterar-cor-titulo button {
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background-image: linear-gradient(to right,
+            rgb(255, 0, 0),
+            rgb(255, 165, 0),
+            rgb(255, 255, 0),
+            rgb(0, 128, 0),
+            rgb(0, 0, 255),
+            rgb(75, 0, 130),
+            rgb(238, 130, 238),
+            rgb(255, 0, 0));
+
+    background-size: 200% auto;
+    animation: slideColor 4s linear infinite;
+    text-shadow:
+        1px 1px 0 #000,
+        -1px 1px 0 #000,
+        1px -1px 0 #000,
+        -1px -1px 0 #000;
+}
+
+.botao-alterar-cor-fundo button:hover {
+    transform: scale(1.05);
+}
+
+.botao-alterar-cor-paragrafo button {
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background-image: linear-gradient(to right,
+            rgb(255, 0, 0),
+            rgb(255, 165, 0),
+            rgb(255, 255, 0),
+            rgb(0, 128, 0),
+            rgb(0, 0, 255),
+            rgb(75, 0, 130),
+            rgb(238, 130, 238),
+            rgb(255, 0, 0));
+
+    background-size: 200% auto;
+    animation: slideColor 4s linear infinite;
+    text-shadow:
+        1px 1px 0 #000,
+        -1px 1px 0 #000,
+        1px -1px 0 #000,
+        -1px -1px 0 #000;
+}
+
+.botao-alterar-cor-paragrafo button:hover {
+    transform: scale(1.05);
+}
+
+@keyframes slideColor {
+    to {
+        background-position: -200% center;
+    }
+}
+
+.botoes-coloridos {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 20px;
+    margin-top: 250px;
+}
+
+
+/* BOTAO NORMAL*/
+.botao-alterar-fonte-titulo button {
+    border-radius: 10px;
+    padding: 10px 20px;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.botao-alterar-fonte-titulo button:hover {
+    transform: scale(1.05);
+}
+
+.botao-alterar-fonte-titulo {
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
 }
